fixed sonar violation in sat package